Bug 1248796 - Store on Telemetry whether the e10s blocking code successfully ran. r=gftrizsche data-r=bsmedberg a=sledru