toolkit/xre/nsAppRunner.cpp
@@ -4818,6 +4818,9 @@ mozilla::BrowserTabsRemoteAutostart()
     mozilla::Telemetry::Accumulate(mozilla::Telemetry::E10S_BLOCKED_FROM_RUNNING,
                                     !gBrowserTabsRemoteAutostart);
   }
+  if (Preferences::HasUserValue("extensions.e10sBlockedByAddons")) {
+    mozilla::Telemetry::Accumulate(mozilla::Telemetry::E10S_ADDONS_BLOCKER_RAN, true);
+  }
   return gBrowserTabsRemoteAutostart;
 }
 
